[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
config = { version = "0.15.11", features = ["yaml"] }
num_cpus = "1.17.0"
sea-orm = { version = "1.1.12", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
uuid = { version = "1.17.0", features = ["v4"] }
tower-http = { version = "0.6.4", features = ["trace", "timeout", "limit", "cors", "normalize-path", "auth", "compression-full"] }
xid = "1.1.1"
bytesize = "2.0.1"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.23.0", features = ["full_validator"] }
regex = "1.11.1"
idgenerator = "2.0.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
rust-embed = { version = "8.7.2", features = ["axum", "axum-ex", "tokio", "compression", "debug-embed", "include-exclude", "include-flate", "interpolate-folder-path", "mime-guess"] }